# match3d-plus

./: .gitignore  CLAUDE_HISTORY.md  CMakeLists.txt  README.md
data/3d-data/: 1_17_16_I.xv  1_17_16_II.xv  27_46_47_I.xv  27_46_47_II.xv  Viff-File-format.txt  dif-1_17_16_II.xv-1_17_16_I.xv  dif-27_46_47_II.xv-27_46_47_I.xv  lego-0.1mmx.ply
docs/: developer-handoff.md  howto-use-match3d-v2.txt  registration-algorithm-technical.tex  registration-strategies.md  stl-implementation-plan.md  stl-import-phase1-plan.md  surface-fitting-technical.md  synthetic-test-data.md  user-manual-registration.md  user-manual-roi-histogram-statistics.md  user-manual-stl-import.md  user-manual-surface-fitting.md  viff-format.md
src/: AppSettings.cpp  AppSettings.h  CMakeLists.txt  DepthImageView.cpp  DepthImageView.h  ImageProcessor.cpp  ImageProcessor.h  ImageWindow.cpp  ImageWindow.h  MainWindow.cpp  MainWindow.h  RoiMask.cpp  RoiMask.h  main.cpp
src/dialogs/: GlobalParametersDialog.cpp  GlobalParametersDialog.h  HistogramDialog.cpp  HistogramDialog.h  MatchingControlPanel.cpp  MatchingControlPanel.h  STLImportDialog.cpp  STLImportDialog.h  SliceDialog.cpp  SliceDialog.h
src/io/: PlyIO.cpp  PlyIO.h  ViffReader.cpp  ViffReader.h  ViffWriter.cpp  ViffWriter.h  viff_test.cpp
src/mesh3d/: MeshData.h  MeshProjection.cpp  MeshProjection.h  MeshReader.cpp  MeshReader.h  STLReader.cpp  STLReader.h
src/registration/: CoarseRegistration.cpp  CoarseRegistration.h  DifferenceCalculator.cpp  DifferenceCalculator.h  RegistrationWorker.cpp  RegistrationWorker.h  SVD3x3.cpp  SVD3x3.h  Transformation3D.h
src/tools/: GenerateWearSamples.cpp  SyntheticTestData.cpp
src/visualization3d/: STLPreviewWidget.cpp  STLPreviewWidget.h
